--- a/cn.zh-CN/设备管理/设备影子/设备影子概览.md
+++ b/cn.zh-CN/设备管理/设备影子/设备影子概览.md
@@ -42,7 +42,7 @@ keyword: [物联网, 物联网平台, IoT, 设备影子, 期望值, 期望状态
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **设备**。
 
@@ -50,7 +50,7 @@ keyword: [物联网, 物联网平台, IoT, 设备影子, 期望值, 期望状态
 
 5.  单击**设备影子**，页面显示设备上报的影子状态。
 
-    ![设备影子](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/6286549951/p41532.png)
+    ![设备影子](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6286549951/p41532.png)
 
 6.  单击**更新影子**，在“desired”部分，填入期望设备状态。
 
