--- a/cn.zh-CN/最佳实践/监控运维/设备OTA固件升级实践/推送固件到设备端.md
+++ b/cn.zh-CN/最佳实践/监控运维/设备OTA固件升级实践/推送固件到设备端.md
@@ -18,7 +18,7 @@ keyword: [物联网, 物联网平台, IoT, OTA, 固件升级]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**监控运维** \> **OTA升级**。
 
@@ -48,14 +48,14 @@ keyword: [物联网, 物联网平台, IoT, OTA, 固件升级]
 
 -   设备端收到的升级通知信息。
 
-    ![iot固件升级](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8608649951/p66139.png)
+    ![iot固件升级](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8608649951/p66139.png)
 
 -   获取新版本信息，连接固件下载地址等。
 
-    ![iot固件升级](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8608649951/p66142.png)
+    ![iot固件升级](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8608649951/p66142.png)
 
 -   下载固件，并上报进度。
 
-    ![iot固件升级](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/8608649951/p66144.png)
+    ![iot固件升级](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8608649951/p66144.png)
 
 
