--- a/cn.zh-CN/设备管理/设备端错误码.md
+++ b/cn.zh-CN/设备管理/设备端错误码.md
@@ -276,10 +276,7 @@
 
 请求Topic：`/ota/device/request/${YourProductKey}/${YourDeviceName}`
 
-**说明：**
-
--   OTA升级AbstractAlinkJsonMessageConsumer类中，只有DeviceOtaUpgradeReqConsumer会返回错误码；其它接口不返回错误码信息，返回数据为null。
--   设备请求升级包信息的Topic与返回数据Topic相同。
+**说明：** 设备请求升级包信息的Topic与返回数据Topic相同。
 
 错误码：429、9112、500
 
