--- a/cn.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到实例内的时序数据存储.md
+++ b/cn.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到实例内的时序数据存储.md
@@ -4,13 +4,13 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 时序数
 
 # 数据转发到实例内的时序数据存储
 
-使用您购买的实例时，可以配置数据流转规则，将数据转发到实例内的时序数据存储中存储。
+使用企业版实例时，可以配置数据流转规则，将数据转发到实例内的时序数据存储中存储。
 
 ## 限制说明
 
 -   仅华东2（上海）、华北2（北京）、华南1（深圳）地域支持实例内的时序数据存储，实例内的时序数据存储详情请参见[时序数据存储管理](/cn.zh-CN/设备管理/时序数据存储管理.md)。
 -   只支持JSON格式数据转发。
--   转发的消息中，除了配置的timestamp、tag、值字段外，其他字段都将作为metric写入时序数据存储。metric的值只能为数值类型，否则会导致写入失败。
+-   转发的消息中，除了配置的timestamp、tag值字段外，其他字段都将作为metric写入时序数据存储。metric的数据类型支持数值型、字符串，其他类型会导致写入失败。
 
 ## 前提条件
 
@@ -22,7 +22,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 时序数
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**规则引擎** \> **云产品流转**。
 
@@ -32,19 +32,18 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 时序数
 
 6.  在添加操作对话框中，选择操作为**存储到实例内的时序数据存储中**。按照界面提示，设置其他信息，单击**确认**。
 
-    ![添加操作](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3892482061/p174333.png)
-
     |参数|描述|
     |:-|:-|
     |选择操作|选择**存储到实例内的时序数据存储中**。|
     |地域|固定为您的物联网平台实例所在地域。|
+    |metric数据类型|选择metric的数据类型。支持**数值型**和**字符串**。更多信息，可单击帮助按钮![帮助](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2116955061/p182680.png)查看。 |
     |timestamp|时间戳。支持：     -   使用转义符`${}`表达式，例如`${time}`，表示取值为数据源Topic消息中time字段对应的值。
     -   使用数据流转函数`timestamp()`，表示取值为数据流转服务器的时间戳。
     -   输入值，必须为Unix时间戳，例如1404955893000。 |
-    |tag|设置标记数据的标签名。支持中文汉字、英文字母、数字、和特殊字符，包括：半角冒号（:）、逗号（,）、点号 （.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号\(\)、方括号\[\]。|
-    |值|设置标签值。支持：     -   使用转义符`${}`表达式。例如，数据源Topic的消息结构中，包含一个位置属性，标识符为city，则可以指定标签值为`${city}`，表示消息中city字段对应的值。建议使用此方式。
+    |tag名称|设置标记数据的标签名。支持中文汉字、英文字母、数字、和特殊字符，包括：半角冒号（:）、逗号（,）、英文句号（.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号（\(\)）、方括号（\[\]）。|
+    |tag值|设置标签值。支持：     -   使用转义符`${}`表达式。例如，数据源Topic的消息结构中，包含一个位置属性，标识符为city，则可以指定标签值为`${city}`，表示消息中city字段对应的值。建议使用此方式。
     -   使用数据流转函数规定的一些函数，例如`deviceName()`，表示标签值为设备名称。支持的函数，请参见[函数列表](/cn.zh-CN/消息通信/云产品流转/函数列表.md)。
-    -   输入常量，例如beijing。支持输入中文汉字、英文字母、数字、和特殊字符包括：半角冒号（:）、逗号（,）、点号 （.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号\(\)、方括号\[\]。
+    -   输入常量，例如beijing。支持输入中文汉字、英文字母、数字、和特殊字符包括：半角冒号（:）、逗号（,）、英文句号（.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号（\(\)）、方括号（\[\]）。
 **说明：**
 
     -   最多可添加8个tag键值对。
@@ -55,7 +54,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 流转数据, 时序数
 
 ## 数据流转示例
 
-某规则的SQL如下：
+示例规则的SQL：
 
 ```
 SELECT time,city,power,distance, FROM "/alprodu****/myDevice/user/update"；
