--- a/cn.zh-CN/产品定价/欠费说明.md
+++ b/cn.zh-CN/产品定价/欠费说明.md
@@ -1,10 +1,21 @@
-# 欠费说明 {#concept_zc5_jx1_5db .concept}
+# 欠费说明
 
-账单出账时间通常在当前计费周期结束后4小时内。
+请确保账户余额充足，欠费可能导致设备不可用的风险。
 
-欠费时间24小时内，服务可保留使用。欠费时间超过24小时，服务将自动停止。为免服务停止影响您的业务，建议您在欠费24小时内续费。
+-   公共实例的按量计费欠费说明
 
-若欠费时间超过24小时，您再次充值后即可继续使用服务，已连接的设备也将恢复通信。
+    按量计费的账单出账时间通常在当前计费周期结束后4小时内。
 
-续费相关操作，请参考[续费文档](https://help.aliyun.com/knowledge_detail/37118.html)。
+    使用按量计费方式的资源产生欠费，在24小时内，服务可保留使用。欠费时间超过24小时，服务将自动停止。为避免服务停止影响您的业务，请您在欠费24小时内充值。
+
+    充值操作，请参见[充值](https://help.aliyun.com/knowledge_detail/37107.html)。
+
+-   企业版实例的到期说明
+
+    购买的实例到期后，会停止服务；到期7天后，实例将被释放。实例到期前，请及时续费，避免影响业务运行。
+
+    实例续费方式：在[物联网平台控制台](http://iot.console.aliyun.com/)的实例概览页，单击实例对应的**续费**，进入续费操作页。
+
+
+**说明：** 若因欠费停止服务，您充值或续费后，最多需要30分钟，才能完全恢复正常使用。
 
