--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -11,7 +11,7 @@ keyword: [物联网, IoT, 物联网平台, 物联网应用, 设备, 数量限制
 |限制项|描述|限制|
 |:--|:-|:-|
 |标签个数|单个产品、设备或分组最多可以添加的标签数。|100|
-|产品数量|企业实例：单实例下最多可以创建的产品数。|1,000|
+|产品数量|企业版实例：单实例下最多可以创建的产品数。|1,000|
 |公共实例：单账号下最多可以创建的产品数。|1,000|
 |设备数量|单产品最多可以添加的设备数。 **说明：**
 
@@ -38,7 +38,7 @@ keyword: [物联网, IoT, 物联网平台, 物联网应用, 设备, 数量限制
 |一个设备最多可以被添加到10个分组中。|10|
 |数据解析|数据解析脚本文件大小不能超过128 KB。|128 KB|
 |远程配置|远程配置文件，仅支持JSON格式，大小不能超过64 KB。|64 KB|
-|数据存储时间|产品运行时，产生的属性、事件、服务数据存储时间为30天。超出30天的数据不再保存。 若您有更长时间的数据存储或分析需要，可以使用[数据分析服务]()。
+|数据存储时间|产品运行时，产生的属性、事件、服务数据存储时间为30天。超出30天的数据不再保存。 若您有更长时间的数据存储或分析需要，可以使用[数据分析服务](/cn.zh-CN/物联网数据分析（老版本）/数据源/设备数据源.md)。
 
 |30天|
 |文件管理|一个阿里云账号可存储在物联网平台服务器的文件总大小的上限。|1 GB|
