--- a/cn.zh-CN/产品简介/产品架构.md
+++ b/cn.zh-CN/产品简介/产品架构.md
@@ -6,7 +6,7 @@ keyword: [物联网, IoT, 物联网平台, 物联网应用, 设备]
 
 设备连接物联网平台，与物联网平台进行数据通信。物联网平台可将设备数据流转到其他阿里云产品中进行存储和处理。这是构建物联网应用的基础。
 
-![物联网平台架构](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3184232061/p172083.jpg)
+![物联网平台架构](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3184232061/p172083.jpg)
 
 ## IoT SDK
 
@@ -29,6 +29,10 @@ IoT Hub具有下列特性：
 -   支持多种通信模式：IoT Hub支持RRPC和PUB/SUB两种通信模式，以满足您在不同场景下的需求。
 -   支持多种设备接入协议：支持设备使用CoAP、MQTT、HTTPS协议接入物联网平台。
 
+## 数据分析
+
+数据分析是阿里云为物联网开发者提供的数据智能分析服务，针对物联网数据特点，提供海量数据的存储备份、资产管理、报表分析和数据服务等能力，帮助企业用户更容易地挖掘物联网数据中的价值。
+
 ## 设备管理
 
 物联网平台为您提供功能丰富的设备管理服务，包括：生命周期、[设备分组](/cn.zh-CN/设备管理/设备分组.md)、[设备影子](/cn.zh-CN/设备管理/设备影子/设备影子概览.md)、[物模型](/cn.zh-CN/设备管理/物模型/什么是物模型.md)、[数据解析](/cn.zh-CN/设备管理/数据解析/什么是数据解析.md)、[数据存储](/cn.zh-CN/设备管理/文件管理.md)、[在线调试](/cn.zh-CN/监控运维/在线调试/调试虚拟设备.md)、[OTA升级](/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md)、[远程配置](/cn.zh-CN/监控运维/远程配置.md)、实时监控等。
@@ -37,11 +41,11 @@ IoT Hub具有下列特性：
 
 当设备基于Topic进行通信时，您可以编写SQL对Topic中的数据进行处理，然后配置转发规则将数据转发到其他Topic或阿里云服务上进行存储和处理。例如：
 
--   转发到实例内的时序数据存储中进行存储（仅您购买的实例支持）。
--   转发到云数据库RDS、表格存储（Table Store）和时序时空数据库（TSDB）中进行存储。
+-   转发到实例内的时序数据存储中进行存储（企业版实例支持）。
+-   转发到云数据库RDS版、表格存储（Tablestore）和时序数据库（TSDB）中进行存储。
 -   转发到DataHub中，进而使用实时计算进行计算，使用MaxCompute进行大规模离线计算。
 -   转发到函数计算（FC）中，进行事件计算。
--   转发到消息队列（RocketMQ）或消息服务（MNS）中，实现高可靠消费数据。
+-   转发到消息队列RocketMQ和消息服务（MNS）中，实现高可靠消费数据。
 -   转发到另一个Topic中实现M2M通信。
 
 ## 安全认证和权限策略
