--- a/intl.zh-CN/产品简介/产品架构.md
+++ b/intl.zh-CN/产品简介/产品架构.md
@@ -6,7 +6,7 @@ keyword: [物联网, IoT, 物联网平台, 物联网应用, 设备]
 
 设备连接物联网平台，与物联网平台进行数据通信。物联网平台可将设备数据流转到其他阿里云产品中进行存储和处理。这是构建物联网应用的基础。
 
-![物联网平台架构](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3184232061/p172084.jpg)
+![物联网平台架构](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3184232061/p172084.jpg)
 
 ## IoT SDK
 
@@ -37,7 +37,7 @@ IoT Hub具有下列特性：
 
 当设备基于Topic进行通信时，您可以编写SQL对Topic中的数据进行处理，然后配置转发规则将数据转发到其他Topic或阿里云服务上进行存储和处理。例如：
 
--   转发到云数据库RDS和表格存储（Table Store）中进行存储。
+-   转发到云数据库RDS版和表格存储（Tablestore）中进行存储。
 -   转发到函数计算（FC）中，进行事件计算。
 -   转发到消息服务（MNS）中，实现高可靠消费数据。
 -   转发到另一个Topic中实现M2M通信。
