--- a/cn.zh-CN/设备接入/泛化协议/进阶用法.md
+++ b/cn.zh-CN/设备接入/泛化协议/进阶用法.md
@@ -52,22 +52,22 @@ private static DeviceConfigManager selfDefineDeviceConfigManager = new DeviceCon
 
 其中，变量$\{productKey\}需替换成您的网桥所属产品的ProductKey。
 
-变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区](https://help.aliyun.com/document_detail/40654.html)。
+变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区]()。
 
 例如：某用户的网桥设备的productKey为a1abcab\*\*\*\*，地域为上海，HTTP2网关服务地址为`https://a1abcab****.iot-as-http2.cn-shanghai.aliyuncs.com:443`。
 
--   对于您购买的实例，HTTP2网关服务地址的结构为`https://${IotInstanceId}.http2.iothub.aliyuncs.com:443`。
+-   对于企业版实例，HTTP2网关服务地址的结构为`https://${IotInstanceId}.http2.iothub.aliyuncs.com:443`。
 
 其中，变量$\{IotInstanceId\}需替换成实例ID。
 
 例如：某用户的实例的实例ID为iot-cn-g06kwb\*\*\*\*，HTTP2网关服务地址为`https://iot-cn-g06kwb****.http2.iothub.aliyuncs.com:443`。 |
 |authEndpoint|是|设备认证服务地址。 -   对于公共实例，设备认证服务地址结构为`https://iot-auth.${RegionId}.aliyuncs.com/auth/bridge`。
 
-其中，变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区](https://help.aliyun.com/document_detail/40654.html)。
+其中，变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区]()。
 
 例如：地域为上海，则认证服务地址为`https://iot-auth.cn-shanghai.aliyuncs.com/auth/bridge`。
 
--   对于您购买的实例，设备认证服务地址结构为`https://${IotInstanceId}.auth.iothub.aliyuncs.com/auth/bridge`。
+-   对于企业版实例，设备认证服务地址结构为`https://${IotInstanceId}.auth.iothub.aliyuncs.com/auth/bridge`。
 
 其中，变量$\{IotInstanceId\}需替换成实例ID。
 
@@ -78,10 +78,10 @@ private static DeviceConfigManager selfDefineDeviceConfigManager = new DeviceCon
 |:-|:---|:-|
 |accessKey|是|您的阿里云账号的AccessKey ID。 在[物联网平台控制台](http://iot.console.aliyun.com/)，鼠标移动到您的账号头像上，然后单击**AccessKey管理**，创建或查看AccessKey。 |
 |accessSecret|是|您的阿里云账号的AccessKey Secret。|
-|name|是|将要创建网桥设备的所在地域ID。 地域的表达方法，请参见[地域和可用区](https://help.aliyun.com/document_detail/40654.html)。 |
+|name|是|将要创建网桥设备的所在地域ID。 地域的表达方法，请参见[地域和可用区]()。 |
 |region|是|将要创建网桥设备的所在地域ID。 表达方法同name。 |
 |product|是|产品名称，固定为Iot。|
-|endpoint|是|调用指定地域API的节点地址。节点地址结构为`iot.${RegionId}.aliyuncs.com`。 其中，变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区](https://help.aliyun.com/document_detail/40654.html)。
+|endpoint|是|调用指定地域API的节点地址。节点地址结构为`iot.${RegionId}.aliyuncs.com`。 其中，变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区]()。
 
 如上海节点的endpoint为`iot.cn-shanghai.aliyuncs.com`。 |
 
@@ -149,6 +149,6 @@ tslUplinkHandler.updateDeviceTag(requestId, originalIdentity, "testDeviceTag", S
 
 如果事件类型定义为故障，则该参数为`ThingEventTypes.ERROR`。 |
 |params|事件的输出参数。事件输出参数的identifier、数据类型、取值范围等也在定义事件时定义。本示例中，上报事件的出参identifier是testEventParam，参数值是123。|
-|testDeviceTag|设备标签键（key），String类型。本示例中为testDeviceTag。 实际使用时，请根据设备标签键规范和您的需求设置。请参见[设备标签](/cn.zh-CN/设备管理/标签.md)。|
+|testDeviceTag|设备标签键（key），String类型。本示例中为testDeviceTag。 实际使用时，请根据设备标签键规范和您的需求设置。更多信息，请参见[设备标签](/cn.zh-CN/设备管理/标签.md)。|
 |String.valueOf\(random.nextInt\(1000\)\)|设备标签值（value），String类型。本示例中，用`String.valueOf(random.nextInt(1000))`表示取值为一个小于1000的随机值。实际使用时，请根据设备标签值规范和您的需求设置，请参见[设备标签](/cn.zh-CN/设备管理/标签.md)。|
 
