--- a/cn.zh-CN/消息通信/云产品流转/数据流转方案对比.md
+++ b/cn.zh-CN/消息通信/云产品流转/数据流转方案对比.md
@@ -51,7 +51,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 
 |流转目标|使用场景|优点|缺点|
 |:---|:---|:-|:-|
-|实例内的时序数据存储 **说明：** 仅用户购买的实例支持实例内的时序数据存储。
+|实例内的时序数据存储 **说明：** 仅用户购买的企业版实例支持实例内的时序数据存储。
 
 |适合根据设备数据进行业务分析和监控的场景。|数据直接写入实例内的时序数据存储。|-|
 |消息队列RocketMQ|要对设备数据进行复杂或精细化处理的海量设备场景。 设备消息量\>1,000 QPS的场景，推荐使用消息队列 RocketMQ。
@@ -67,9 +67,9 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 
 |性能略低于消息队列RocketMQ。 |
 |云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|-|
-|时序时空数据库（TSDB）|适合根据设备数据进行业务分析和监控的场景。|数据直接写入时序数据库。|-|
+|时序数据库（TSDB）|适合根据设备数据进行业务分析和监控的场景。|数据直接写入时序数据库。|-|
 |DataHub|适合需对数据进行分析处理的场景。|数据直接写入DataHub。|-|
-|表格存储（Table Store）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|-|
+|表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|-|
 |函数计算（Function Compute）|需要简化设备开发过程，且对设备数据进行一定自由度的处理的场景。|-   数据处理自由度高。
 -   功能多。
 -   无需部署。
@@ -78,7 +78,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 
 ## 服务端订阅
 
-服务端可以通过AMQP SDK或消息服务（MNS）SDK接收已订阅的产品下所有类型的消息，包含设备上报消息、设备状态变化通知、设备生命周期变更、物模型历史数据上报、固件升级状态通知、网关发现子设备上报、设备拓扑关系变更等。
+服务端可以通过AMQP SDK或消息服务（MNS）SDK接收已订阅的产品下所有类型的消息，包含设备上报消息、设备状态变化通知、设备生命周期变更、物模型历史数据上报、OTA升级状态通知、网关发现子设备上报、设备拓扑关系变更等。
 
 |使用限制|使用注意|相关文档|
 |:---|:---|:---|
