--- a/intl.zh-CN/消息通信/云产品流转/数据流转方案对比.md
+++ b/intl.zh-CN/消息通信/云产品流转/数据流转方案对比.md
@@ -58,7 +58,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 
 |- |
 |云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|-|
-|表格存储（Table Store）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|-|
+|表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|-|
 |函数计算（Function Compute）|需要简化设备开发过程，且对设备数据进行一定自由度的处理的场景。|-   数据处理自由度高。
 -   功能多。
 -   无需部署。
