--- a/cn.zh-CN/设备管理/高级搜索.md
+++ b/cn.zh-CN/设备管理/高级搜索.md
@@ -4,32 +4,40 @@ keyword: [物联网, 物联网平台, IoT, 搜索设备, 高级搜索, 筛选设
 
 # 高级搜索
 
-当您在控制台选择要向设备分组添加的设备，或选择要进行OTA升级的设备时，可以使用高级搜索功能，通过类SQL语句快速搜索满足指定条件的设备，例如在线设备。本文介绍高级搜索操作，以及使用的类SQL语法。
+当您需要在物联网平台搜索设备时，可以使用高级搜索功能，通过类SQL语句快速搜索满足指定条件的设备，例如在线设备。本文介绍高级搜索操作，以及使用的类SQL语法。
 
 ## 说明
 
-仅支持在华东2（上海）、华北2（北京）、华南1（深圳）地域您购买的实例中搜索设备。
+仅支持在华东2（上海）、华北2（北京）、华南1（深圳）地域企业版实例中进行设备高级搜索。
+
+[物联网平台控制台](http://iot.console.aliyun.com/)的以下使用场景支持高级搜索：
+
+-   在**设备管理** \> **设备**页面，从设备列表搜索出指定设备进行管理。具体操作，请参见[管理设备](/cn.zh-CN/设备接入/创建设备/管理设备.md)。
+-   在向设备分组添加设备时，搜索待添加的设备。具体操作，请参见[设备分组](/cn.zh-CN/设备管理/设备分组.md)。
+-   在验证OTA升级包、创建批量升级批次时，搜索待升级的设备。具体操作，请参见[推送升级包到设备端](/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md)。
+
+您也可以使用[QueryDeviceBySQL](/cn.zh-CN/云端开发指南/云端API参考/设备管理/QueryDeviceBySQL.md)API进行设备高级搜索。使用API进行高级搜索时，不局限于以上控制台使用场景。
 
 ## 操作步骤
 
-下面以选择要向设备分组添加的设备时的高级搜索为例，介绍控制台的设备高级搜索操作。
+下面以选择要向设备分组添加设备时的高级搜索为例，介绍控制台的设备高级搜索操作。
 
-1.  进入如下图所示的设备选择页面。相应操作请参见[设备分组](/cn.zh-CN/设备管理/设备分组.md)。
+1.  进入如下图所示的设备选择页面。具体操作，请参见[设备分组](/cn.zh-CN/设备管理/设备分组.md)。
 
-    ![设备选择页面](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2461752061/p172640.jpg)
+    ![设备选择页面](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2461752061/p172640.jpg)
 
 2.  打开右上角**高级搜索**开关。
 
 3.  在搜索框中输入条件搜索语句，单击搜索按钮，列表显示搜索结果。
 
-    条件搜索语句语法请参见[类SQL语法说明](#section_mit_06x_hn3)。
+    条件搜索语句语法的更多信息，请参见[类SQL语法说明](#section_mit_06x_hn3)。
 
-    ![搜索](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/2461752061/p172642.jpg)
+    ![搜索](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2461752061/p172642.jpg)
 
 
 ## 类SQL语法说明
 
-在控制台使用高级搜索功能时，类SQL语句由WHERE子句、ORDER BY子句（可选）组成，省略SELECT子句、LIMIT子句以及WHERE子句的`WHERE`。长度限制400个字符。
+在控制台使用高级搜索功能时，类SQL语句由WHERE子句、ORDER BY子句（可选）组成，省略SELECT子句、LIMIT子句以及WHERE子句的`WHERE`。长度限制为400个字符。
 
 示例：
 
@@ -75,17 +83,23 @@ ORDER BY子句用来实现自定义排序，可自定义排序的字段包括gmt
 |group.group\_id|text|设备分组ID。|
 |tag.tag\_name|text|设备标签名。|
 |tag.tag\_value|text|设备标签值。|
+|ota\_module.module\_name|text|OTA模块名称。必须与ota\_module.firmware\_version配合使用，用于指定设备当前OTA版本号对应的OTA模块。
+
+不可指定为default模块。 |
+|ota\_module.firmware\_version|text|设备当前OTA版本号。必须与ota\_module.module\_name配合使用。 |
 
 **运算符说明**
 
 |运算符|支持的字段数值类型|
 |---|---------|
-|=|number、date、text|
+|=|number、date、text、keyword|
 |\>|number、date|
 |<|number、date|
 |LIKE|text|
 
-其中，LIKE支持前缀匹配，不支持后缀匹配或通配符匹配，且前缀不得少于4个字符，前缀固定以%结尾。示例：
+其中，LIKE支持前缀匹配，不支持后缀匹配或通配符匹配，且前缀不得少于4个字符，前缀固定以%结尾。
+
+示例：
 
 ```
 product_key = "a1*********" and name LIKE "test%"
