--- a/cn.zh-CN/设备管理/时序数据存储管理.md
+++ b/cn.zh-CN/设备管理/时序数据存储管理.md
@@ -6,7 +6,7 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 时序数据存储是一种高性能、低成本、稳定可靠的在线时序数据库服务，具有高效读写、高压缩比存储等优点。针对物联网设备数据采集场景，时序数据存储能解决由于设备采集点数量巨大、数据采集频率高造成的存储成本高、写入和查询分析效率低的问题。
 
-如果您购买了实例，可以享受时序数据存储服务。公共实例不提供此服务。购买实例，请参见[实例管理](/cn.zh-CN/.md)。
+如果您购买了企业版实例，可以享受时序数据存储服务。公共实例不提供此服务。关于如何购买企业版实例，请参见[实例管理](/cn.zh-CN/.md)。
 
 ## 什么是时序数据
 
@@ -14,7 +14,7 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 例如：下图中有3条时间线，\{“metric”: “cpu”，”tags”: \{“site”: “et2”, “ip”: “1.1.1.1”\}这个metric与tag的组合为一条时间线，在同一条时间线下面存储连续的时序数据\(timestamp,value\)。
 
-![时间线](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/1286549951/p161000.png)
+![时间线](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/1286549951/p161000.png)
 
 ## 时序数据存储功能
 
@@ -38,7 +38,7 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 ## 开通时序数据存储
 
-时序数据存储随您购买的实例开通。购买实例，请参见[实例管理](/cn.zh-CN/.md)。
+时序数据存储随您购买的企业版实例开通。具体操作，请参见[实例管理](/cn.zh-CN/.md)。
 
 需要选择时序数据存储的规格，包括以下项目：
 
@@ -57,11 +57,11 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  设置时序数据时效。
 
-    购买实例时时效配置默认关闭。您可以开启数据时效，设置时效为1~365天。
+    购买企业版实例时，时效配置默认关闭。您可以开启数据时效，设置时效为1~365天。
 
     在实例详情页，打开**时序存储时效**开关，设置保留数据天数。
 
@@ -71,7 +71,7 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 5.  查看时序存储用户名、密码、连接地址。
 
-    用户名、密码、连接地址用于查询时序存储中的数据，购买实例时会自动生成。
+    用户名、密码、连接地址用于查询时序存储中的数据，购买企业版实例时，会自动生成。
 
     在实例详情页，在实例信息中查看时序存储用户名，单击**查看**，短信校验码验证通过后显示密码。
 
@@ -90,13 +90,13 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 -   在设置转发之前，请参见[设置数据流转规则](/cn.zh-CN/消息通信/云产品流转/设置数据流转规则.md)，创建数据转发规则和编写处理数据的SQL。
 -   只支持JSON格式数据转发。
--   转发的消息中，除了配置的timestamp、tag、值字段外，其他字段都将作为metric写入时序数据存储。metric的值只能为数值类型，否则会导致写入失败。
+-   转发的消息中，除了配置的timestamp、tag值字段外，其他字段都将作为metric写入时序数据存储。metric的数据类型支持数值型、字符串，其他类型会导致写入失败。
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**规则引擎** \> **云产品流转**。
 
@@ -106,19 +106,18 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 6.  在添加操作对话框中，选择操作为**存储到实例内的时序数据存储中**。按照界面提示，设置其他信息，单击**确认**。
 
-    ![添加操作](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3892482061/p174333.png)
-
     |参数|描述|
     |:-|:-|
     |选择操作|选择**存储到实例内的时序数据存储中**。|
     |地域|固定为您的物联网平台实例所在地域。|
+    |metric数据类型|选择metric的数据类型。支持**数值型**和**字符串**。更多信息，可单击帮助按钮![帮助](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2116955061/p182680.png)查看。 |
     |timestamp|时间戳。支持：     -   使用转义符`${}`表达式，例如`${time}`，表示取值为数据源Topic消息中time字段对应的值。
     -   使用数据流转函数`timestamp()`，表示取值为数据流转服务器的时间戳。
     -   输入值，必须为Unix时间戳，例如1404955893000。 |
-    |tag|设置标记数据的标签名。支持中文汉字、英文字母、数字、和特殊字符，包括：半角冒号（:）、逗号（,）、点号 （.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号\(\)、方括号\[\]。|
-    |值|设置标签值。支持：     -   使用转义符`${}`表达式。例如，数据源Topic的消息结构中，包含一个位置属性，标识符为city，则可以指定标签值为`${city}`，表示消息中city字段对应的值。建议使用此方式。
+    |tag名称|设置标记数据的标签名。支持中文汉字、英文字母、数字、和特殊字符，包括：半角冒号（:）、逗号（,）、英文句号（.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号（\(\)）、方括号（\[\]）。|
+    |tag值|设置标签值。支持：     -   使用转义符`${}`表达式。例如，数据源Topic的消息结构中，包含一个位置属性，标识符为city，则可以指定标签值为`${city}`，表示消息中city字段对应的值。建议使用此方式。
     -   使用数据流转函数规定的一些函数，例如`deviceName()`，表示标签值为设备名称。支持的函数，请参见[函数列表](/cn.zh-CN/消息通信/云产品流转/函数列表.md)。
-    -   输入常量，例如beijing。支持输入中文汉字、英文字母、数字、和特殊字符包括：半角冒号（:）、逗号（,）、点号 （.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号\(\)、方括号\[\]。
+    -   输入常量，例如beijing。支持输入中文汉字、英文字母、数字、和特殊字符包括：半角冒号（:）、逗号（,）、英文句号（.）、单引号（'）、正斜线（/）、短划线（-）、下划线（\_）、圆括号（\(\)）、方括号（\[\]）。
 **说明：**
 
     -   最多可添加8个tag键值对。
@@ -129,7 +128,7 @@ keyword: [物联网, 物联网平台, IoT, 流转数据, 时序数据]
 
 下面给出一个数据流转示例。
 
-某规则的SQL如下：
+示例规则的SQL：
 
 ```
 SELECT time,city,power,distance, FROM "/alprodu****/myDevice/user/update"；
