--- a/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md
+++ b/cn.zh-CN/监控运维/OTA升级/推送升级包到设备端.md
@@ -101,7 +101,7 @@ OTA升级相关限制说明如下：
 如不选择，表示对备选待验证设备的OTA模块当前版本不做限制。
 
     -   差分升级时，该参数默认为已在添加升级包时配置的待升级版本号。 |
-    |待验证设备|选择用于此次测试的设备。在华东2（上海）、华北2（北京）、华南1（深圳）地域您购买的实例中，您可以通过[高级搜索](/cn.zh-CN/设备管理/高级搜索.md)搜索设备。 |
+    |待验证设备|选择用于此次测试的设备。在华东2（上海）、华北2（北京）、华南1（深圳）地域企业版实例中，您可以通过[高级搜索](/cn.zh-CN/设备管理/高级搜索.md)搜索设备。 |
     |设备升级超时时间|设置单个设备的升级超时时间，即多长时间之后，升级未完成则为超时。可选值范围：1分钟~1,440分钟。**说明：** 从设备第一次上报升级进度开始计算升级时间。 |
 
 9.  在升级包列表中，单击升级包对应的**批量升级**，完成升级范围配置和升级策略配置，单击**完成**，批量向设备推送升级通知。
@@ -125,7 +125,7 @@ OTA升级相关限制说明如下：
     -   定向升级：仅升级被选中的设备。选择为定向升级后，提供两种设备选择方式：
         -   **手动勾选**：从设备范围下拉列表选择要升级的设备。
 
-在华东2（上海）、华北2（北京）、华南1（深圳）地域您购买的实例中，您可以通过[高级搜索](/cn.zh-CN/设备管理/高级搜索.md)搜索设备。
+在华东2（上海）、华北2（北京）、华南1（深圳）地域企业版实例中，您可以通过[高级搜索](/cn.zh-CN/设备管理/高级搜索.md)搜索设备。
 
         -   **文件上传**：下载模板，填写、上传CSV格式的设备列表文件。单次最多包含10,000条记录。
 
