--- a/cn.zh-CN/产品定价/计费方式.md
+++ b/cn.zh-CN/产品定价/计费方式.md
@@ -1,78 +1,147 @@
-# 计费方式 {#concept_995208 .concept}
+---
+keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计费, 预付费, 资源包]
+---
 
-物联网平台支持按量付费和预付费（包年包月）两种计费方式。
+# 计费方式
 
-|计费方式|说明|
-|:---|:-|
-|按量付费|根据实际产生的消息数量和设备连接时长计费，无最低费用。 具体计费方法，请参见[消息通信计费](cn.zh-CN/产品定价/消息通信计费.md#)和[连接时长计费](cn.zh-CN/产品定价/连接时长计费.md#)。
+物联网平台支持按量计费、购买实例（包年包月）和包使用量三种计费方式。以下内容仅供参考，实际收费请以账单为准。
 
- |
-|预付费|在[物联网平台购买页](https://www.aliyun.com/product/iot-devicemanagement)，您可以根据业务需要，以包年包月方式购买资源包。 资源包类型：
+**说明：** 推荐您购买实例。相比于按量计费、包使用量，采用购买实例的方式能提供更丰富的功能、更高的SLA保障和更好的数据隔离性。
 
- -   消息通信包
+## 按量计费
 
-需选择：
+如果您使用公共实例，则根据实际产生的消息数量、设备连接时长和固件升级成功次数计费，无最低费用。
 
-    -   设备消息规格：即资源包每月包含的消息数量。取值范围为1000万-100亿条消息，步长为100万条。
+**说明：** 华北2（北京）、华南1（深圳）地域不提供公共实例，必须购买实例才能创建产品、设备，计费方式请参见[购买实例](#section_ay2_vmg_684)。
+
+按量计费具体计费方法，请参见：
+
+[消息通信计费]()
+
+[连接时长计费]()
+
+[OTA升级计费]()
+
+[计费示例]()
+
+## 购买实例
+
+如果您不使用公共实例，而单独购买实例，则为包年包月计费。请在[物联网平台实例购买页](https://common-buy.aliyun.com/?commodityCode=iot_instc_public_cn#/buy)根据您的业务需要，选择规格，购买实例。
+
+**说明：** 目前仅华东2（上海）、华北2（北京）、华南1（深圳）地域支持购买实例。
+
+实例的价格包含以下计费项。
+
+|计费项目|说明|备注|
+|----|:-|--|
+|实例类型|支持基础型、连接型、视频型、数据型。|以实例下所选资源规格计费，实例类型本身不计费。|
+|设备数|实例连接的设备数上限。非连接型实例最小规格为1千个，连接型实例最小规格为1万个，最大规格均为100万个。支持的规格选项以购买页为准。|购买实例后，有效期内所选规格不额外收费。对于非连接型实例的**设备数**选择1千个、2千个、5千个、1万个时，该项免费。 |
+|消息上下行TPS|每秒钟消息发送和接收条数的总和，和消息大小无关。可选100条/秒~10万条/秒。|
+|规则引擎TPS|每秒钟服务端订阅和云产品流转消息发送条数的总和，和消息大小无关。可选100条/秒~10万条/秒。|
+|时序数据写入TPS|每秒钟写入时序存储的最大数据条数，达到上限后会写入失败。可选5千条/秒~12万条/秒。|
+|时序数据存储空间|达到空间上限后会写入失败。可选40 GB~6,000 GB。|
+|视频服务|仅选择视频型实例时，有此选项，必选启用视频服务。启用视频服务时，需要选择视频公网带宽。视频公网带宽只计算从平台下行的流量，上行到平台的流量免费。可选10 Mbps~5,000 Mbps。
+
+更多信息，请参见[视频边缘智能服务文档](https://help.aliyun.com/product/103976.html)。
+
+|新购视频型实例时，免费赠送10 Mbps公网带宽。还支持从基础型实例通过升配方式购买该服务。 |
+|数据分析|选择数据型实例时，有此选项，必选启用数据分析。启用数据分析时，需要选择：
+
+-   数据处理单元：可选20~3,000个。
+-   数据存储空间：可选10 GB~2,000 GB。
+
+更多信息，请参见[物联网数据分析文档](https://help.aliyun.com/product/113682.html)。
+
+|新购数据型实例时，免费赠送20个数据处理单元、10 GB数据存储空间。还支持从基础型实例通过升配方式购买该服务。 |
+|Link WAN|可选择是否开启该服务。更多信息，请参见[物联网络管理平台文档](https://help.aliyun.com/product/96281.html)。
+
+|对于华东2（上海）地域的连接型实例，免费赠送Link WAN服务。|
+|ID²设备安全认证|可选择是否开启该服务。如果启用ID²设备身份认证，需要选择购买的ID² License个数。可选1,000~1,000,000个。
+
+更多信息，请参见[IoT设备身份认证文档](https://help.aliyun.com/document_detail/101295.html)。
+
+|如果开启该服务，购买实例后，服务不再额外收费。|
+
+计费公式：`最终价格=计费项价格总和×购买数量×购买时长`。
+
+**升级实例配置**
+
+购买实例后，您可以根据业务需要升级实例配置。
+
+在实例管理页的实例列表页签下，单击实例对应的**升配**，进入升级配置页面进行购买。
+
+升配所需费用 =（升配后实例每天的价格 - 升配前实例每天的价格）× 实例到期的剩余天数。
+
+**为实例续费**
+
+实例到期后将立即停机，停机7天后将释放实例。请及时续费，避免影响业务运行。
+
+在实例管理页的实例列表页签下，单击实例对应的**续费**为实例续费。
+
+## 包使用量
+
+在[物联网平台购买页](https://common-buy.aliyun.com/?commodityCode=iot_resource_bag#/buy)，您可以根据业务需要，购买资源包。
+
+**说明：**
+
+-   资源包不区分地域，所有地域通用。
+-   资源包购买后立即生效。之后产生的消息数量、设备连接时长和固件升级次数优先从资源包中抵扣。
+-   当月资源包使用完后，产生的消息数量、连接时长和固件升级次数，将按量计费。当月资源包未使用完的部分，不支持退费或延到下月使用。
+
+|资源包类型|价格说明|
+|-----|:---|
+|消息通信包|-   设备消息规格：即资源包每月包含的消息数量。取值范围为1000万-100亿条消息，步长为100万条。
 
 系统计算价格时，会根据所选消息数量规格，基于原价（1.8元/100万条）执行阶梯折扣。
 
-        -   1000万-5000万：9.2折
-        -   5000万-1亿：8.8折
-        -   1亿-5亿：7.5折
-        -   5亿-10亿：7折
-        -   10亿以上：5折
-    -   购买时长：可选1个月、3个月、6个月、1年、3年。
+    -   1000万-5000万：9.2折
+    -   5000万-1亿：8.8折
+    -   1亿-5亿：7.5折
+    -   5亿-10亿：7折
+    -   10亿以上：5折
+-   购买时长：可选1个月、3个月、6个月、1年、3年。
 
 系统计算价格时，会根据所选购买时长执行阶梯折扣（基于消息规格折扣后的折上折）。
 
-        -   1个月：无折扣
-        -   3个月：9.5折
-        -   6个月：9折
-        -   1年：8.5折
-        -   3年：8折
--   连接时长包
-
-需选择：
-
-    -   连接时长规格：即资源包每月包含的设备连接时长，单位：分钟。取值范围为1000万-100亿分钟，步长为100万分钟。
+    -   1个月：无折扣
+    -   3个月：9.5折
+    -   6个月：9折
+    -   1年：8.5折
+    -   3年：8折 |
+|连接时长包|-   连接时长规格：即资源包每月包含的设备连接时长，单位：分钟。取值范围为1000万-100亿分钟，步长为100万分钟。
 
 系统计算价格时，会根据所选连接时长规格，基于原价（1元/100万分钟）执行阶梯折扣。
 
-        -   1000万-5000万：9.2折
-        -   5000万-1亿：8.8折
-        -   1亿-5亿：8折
-        -   5亿-10亿：7.5折
-        -   10亿以上：7折
-    -   购买时长：可选1个月、3个月、6个月、1年、3年。
+    -   1000万-5000万：9.2折
+    -   5000万-1亿：8.8折
+    -   1亿-5亿：8折
+    -   5亿-10亿：7.5折
+    -   10亿以上：7折
+-   购买时长：可选1个月、3个月、6个月、1年、3年。
 
 系统计算价格时，会根据所选购买时长执行阶梯折扣（基于时长规格折扣后的折上折）。
 
-        -   1个月：无折扣
-        -   3个月：9.5折
-        -   6个月：9折
-        -   1年：8.5折
-        -   3年：8折
--   折扣套餐包
+    -   1个月：无折扣
+    -   3个月：9.5折
+    -   6个月：9折
+    -   1年：8.5折
+    -   3年：8折 |
+|固件升级次数包|-   固件升级次数规格：选择范围为1000次-100万次，步长为1000。
 
-套餐包规格和收费标准说明，请参见[套餐包详情](cn.zh-CN/产品定价/隐藏文件夹/套餐包详情.md#)。
+系统计算价格时，会根据所选规格，基于原价（0.2元/次）执行阶梯折扣。
 
+    -   1000-1万：9.6折
+    -   1万-5万：9.2折
+    -   5万-10万：8.8折
+    -   10万-50万：8折
+    -   50万-100万：7.5折
+-   购买时长：可选1个月、3个月、6个月、1年、3年。
 
- **说明：** 
+系统计算价格时，会根据所选购买时长执行阶梯折扣（基于次数规格折扣后的折上折）。
 
--   资源包不区分地域，所有地域通用。
--   资源包购买后立即生效。之后产生的消息数量和设备连接时长优先从资源包中抵扣。
--   当月资源包使用完后，产生的消息数量和连接时长，将根据按量付费方式计费。当月资源包未使用完的部分，不支持退费或延到下月使用。
-
- |
-
-## 相关文档 {#section_6e6_b6j_h8i .section}
-
-[消息通信计费](cn.zh-CN/产品定价/消息通信计费.md#)
-
-[连接时长计费](cn.zh-CN/产品定价/连接时长计费.md#)
-
-[计费示例](cn.zh-CN/产品定价/计费示例.md#)
-
-[欠费说明](cn.zh-CN/产品定价/欠费说明.md#)
+    -   1个月：无折扣
+    -   3个月：9.5折
+    -   6个月：9折
+    -   1年：8.5折
+    -   3年：8折 |
 
