--- a/cn.zh-CN/监控运维/日志服务/云端运行日志.md
+++ b/cn.zh-CN/监控运维/日志服务/云端运行日志.md
@@ -38,6 +38,8 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 
     支持的搜索条件如下表。
 
+    **说明：** 如果输入的搜索条件（如设备名称、内容关键字等），包含以下特殊字符`, '";=()[]{}?@&<>/:\n\t\r`，输入内容会被拆分为多个词，从而导致查询日志失败，页面会出现报错提示：**日志查询，查询参数异常**。
+
     |搜索条件|说明|
     |:---|:-|
     |DeviceName|输入设备名称。根据设备名称，搜索该设备的相关日志。|
