--- a/intl.zh-CN/监控运维/日志服务/云端运行日志.md
+++ b/intl.zh-CN/监控运维/日志服务/云端运行日志.md
@@ -10,7 +10,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 
 上行消息的日志业务类型如下图所示。
 
-![上行消息日志](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9067013061/p174666.jpg)
+![上行消息日志](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9067013061/p174666.jpg)
 
 1.  设备上报数据到IoT Hub，打印设备到云消息日志，包含消息的Topic。
 2.  对于数据处理的不同业务模块，打印本模块的日志。
@@ -18,7 +18,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 
 下行消息的日志业务类型如下图所示。
 
-![下行消息日志](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9067013061/p174665.jpg)
+![下行消息日志](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9067013061/p174665.jpg)
 
 1.  用户通过API调用产生消息，打印API调用日志，包含API名称。
 2.  对于数据处理的不同业务模块，打印本模块的日志。
@@ -33,6 +33,8 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 3.  选择产品，输入搜索条件，然后单击搜索图标。
 
     支持的搜索条件如下表。
+
+    **说明：** 如果输入的搜索条件（如设备名称、内容关键字等），包含以下特殊字符`, '";=()[]{}?@&<>/:\n\t\r`，输入内容会被拆分为多个词，从而导致查询日志失败，页面会出现报错提示：**日志查询，查询参数异常**。
 
     |搜索条件|说明|
     |:---|:-|
@@ -77,6 +79,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 物模型数据, 上行
 |业务一级区分符，表示业务模块。|
 |操作|显示相应的操作名称、API名称、服务的method，或消息的Topic。其中： -   OTA升级相关操作：
     -   OTAFirmwarePush：升级包推送，包括发起时推送、确认时推送、上线时推送。
+    -   OTAFirmwareRequest：设备端主动请求OTA升级包信息。
     -   OTAVersionReport：设备上报OTA模块版本。
     -   OTAProgressReport：设备上报升级进度。
 -   数据解析相关操作：
@@ -233,6 +236,7 @@ TSL公共错误码如下表。
 |---|--|--|--|
 |6321|TSL中，属性对应的标识符identifier不存在。|系统异常。|可以通过提交工单排查。|
 |6317|TSL模型有错误。|系统异常。|可以通过提交工单排查。|
+|6332|传入的参数不符合TSL规范。|传入参数需要符合定义好的TSL规范。|在控制台产品详情中，查看设备所属产品的功能定义。核对传入的参数。|
 |6302|参数不存在。|TSL校验服务的入参时，服务要求的参数没有传。|在控制台产品详情中，查看设备所属产品的功能定义。服务查询调用、属性设置，查询对应服务的入参，核对传入的参数。|
 |6306|传入的参数，不符合TSL整形数据的规范。|TSL校验时： -   参数类型，和TSL中定义的类型不一致。
 -   传入的参数取值范围不符合功能定义时设置的参数范围。
