--- a/cn.zh-CN/产品定价/计费方式.md
+++ b/cn.zh-CN/产品定价/计费方式.md
@@ -12,7 +12,7 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 
 如果您使用公共实例，则根据实际产生的消息数量、设备连接时长和固件升级成功次数计费，无最低费用。
 
-**说明：** 华北2（北京）、华南1（深圳）地域不提供公共实例，必须购买实例才能创建产品、设备，计费方式请参见[购买实例](#section_ay2_vmg_684)。
+**说明：** 华北2（北京）、华南1（深圳）地域不提供公共实例，必须购买实例才能创建产品、设备，计费方式请参见[购买企业版实例](#section_ay2_vmg_684)。
 
 按量计费具体计费方法，请参见：
 
@@ -24,9 +24,9 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 
 [计费示例]()
 
-## 购买实例
+## 购买企业版实例
 
-如果您不使用公共实例，而单独购买实例，则为包年包月计费。请在[物联网平台实例购买页](https://common-buy.aliyun.com/?commodityCode=iot_instc_public_cn#/buy)根据您的业务需要，选择规格，购买实例。
+如果您购买企业版实例，则按包年包月计费，完成购买的费用即为总费用，不再额外对消息通信数量、设备连接时长和OTA升级进行按量计费。请在[物联网平台实例购买页](https://common-buy.aliyun.com/?commodityCode=iot_instc_public_cn#/buy)
 
 **说明：** 目前仅华东2（上海）、华北2（北京）、华南1（深圳）地域支持购买实例。
 
@@ -35,7 +35,7 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 |计费项目|说明|备注|
 |----|:-|--|
 |实例类型|支持基础型、连接型、视频型、数据型。|以实例下所选资源规格计费，实例类型本身不计费。|
-|设备数|实例连接的设备数上限。非连接型实例最小规格为1千个，连接型实例最小规格为1万个，最大规格均为100万个。支持的规格选项以购买页为准。|购买实例后，有效期内所选规格不额外收费。对于非连接型实例的**设备数**选择1千个、2千个、5千个、1万个时，该项免费。 |
+|设备数|实例连接的设备数上限。支持的规格选项以购买页为准。|购买实例后，有效期内所选规格不额外收费。|
 |消息上下行TPS|每秒钟消息发送和接收条数的总和，和消息大小无关。可选100条/秒~10万条/秒。|
 |规则引擎TPS|每秒钟服务端订阅和云产品流转消息发送条数的总和，和消息大小无关。可选100条/秒~10万条/秒。|
 |时序数据写入TPS|每秒钟写入时序存储的最大数据条数，达到上限后会写入失败。可选5千条/秒~12万条/秒。|
@@ -44,7 +44,7 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 
 更多信息，请参见[视频边缘智能服务文档](https://help.aliyun.com/product/103976.html)。
 
-|新购视频型实例时，免费赠送10 Mbps公网带宽。还支持从基础型实例通过升配方式购买该服务。 |
+|购买实例后，服务不再额外收费。|
 |数据分析|选择数据型实例时，有此选项，必选启用数据分析。启用数据分析时，需要选择：
 
 -   数据处理单元：可选20~3,000个。
@@ -52,7 +52,7 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 
 更多信息，请参见[物联网数据分析文档](https://help.aliyun.com/product/113682.html)。
 
-|新购数据型实例时，免费赠送20个数据处理单元、10 GB数据存储空间。还支持从基础型实例通过升配方式购买该服务。 |
+|还支持从基础型实例通过升配方式购买数据分析服务。|
 |Link WAN|可选择是否开启该服务。更多信息，请参见[物联网络管理平台文档](https://help.aliyun.com/product/96281.html)。
 
 |对于华东2（上海）地域的连接型实例，免费赠送Link WAN服务。|
