--- a/cn.zh-CN/产品定价/计费方式.md
+++ b/cn.zh-CN/产品定价/计费方式.md
@@ -26,7 +26,7 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 
 ## 购买企业版实例
 
-如果您购买企业版实例，则按包年包月计费，完成购买的费用即为总费用，不再额外对消息通信数量、设备连接时长和OTA升级进行按量计费。请在[物联网平台实例购买页](https://common-buy.aliyun.com/?commodityCode=iot_instc_public_cn#/buy)
+如果您购买企业版实例，则按包年包月计费，完成购买的费用即为总费用，不再额外对消息通信数量、设备连接时长和OTA升级进行按量计费。请在[物联网平台实例购买页](https://common-buy.aliyun.com/?commodityCode=iot_instc_public_cn#/buy)根据您的业务需要，选择规格，购买实例。
 
 **说明：** 目前仅华东2（上海）、华北2（北京）、华南1（深圳）地域支持购买实例。
 
