--- a/cn.zh-CN/设备接入/泛化协议/进阶用法.md
+++ b/cn.zh-CN/设备接入/泛化协议/进阶用法.md
@@ -60,7 +60,7 @@ private static DeviceConfigManager selfDefineDeviceConfigManager = new DeviceCon
 
 其中，变量$\{IotInstanceId\}需替换成实例ID。
 
-例如：某用户的实例的实例ID为iot-cn-g06kwb\*\*\*\*，HTTP2网关服务地址为`https://iot-cn-g06kwb****.http2.iothub.aliyuncs.com:443`。 |
+例如：某用户的企业版实例的实例ID为iot-cn-g06kwb\*\*\*\*，HTTP2网关服务地址为`https://iot-cn-g06kwb****.http2.iothub.aliyuncs.com:443`。 |
 |authEndpoint|是|设备认证服务地址。 -   对于公共实例，设备认证服务地址结构为`https://iot-auth.${RegionId}.aliyuncs.com/auth/bridge`。
 
 其中，变量$\{RegionId\}需替换成您的服务所在地域ID。RegionId的表达方法，请参见[地域和可用区]()。
@@ -71,7 +71,7 @@ private static DeviceConfigManager selfDefineDeviceConfigManager = new DeviceCon
 
 其中，变量$\{IotInstanceId\}需替换成实例ID。
 
-例如：某用户的实例的实例ID为iot-cn-g06kwb\*\*\*\*，则认证服务地址为`https://iot-cn-g06kwb****.auth.iothub.aliyuncs.com/auth/bridge`。 |
+例如：某用户的企业版实例的实例ID为iot-cn-g06kwb\*\*\*\*，则认证服务地址为`https://iot-cn-g06kwb****.auth.iothub.aliyuncs.com/auth/bridge`。 |
 |popClientProfile|是|配置此参数，泛化协议SDK将调用阿里云端开放接口自动创建一个网桥设备。 具体参数配置见下表popClientProfile。 |
 
 |参数|是否必需|描述|
