--- a/cn.zh-CN/云端开发指南/云端API参考/错误码.md
+++ b/cn.zh-CN/云端开发指南/云端API参考/错误码.md
@@ -254,7 +254,7 @@ ALL：发布和订阅。 |
 |iot.ruleng.CreateRuleActionFailed|创建规则动作失败。 请确认入参信息正确，然后重试。 |
 |iot.ruleng.DeleteRuleActionFailed|删除规则动作失败。 请确认入参信息正确，然后重试。 |
 |iot.ruleng.IncorrectActionTypeForError|错误流转的规则不支持此云产品。|
-|iot.ruleng.IncorrectRegionName|国内节点只能流转到国内，海外节点只能流转到海外同一个节点。|
+|iot.ruleng.IncorrectRegionName|中国内地（大陆）节点只能流转到中国内地（大陆），海外节点只能流转到海外同一个节点。|
 |iot.ruleng.IncorrectSysTopic|错误的基础通信Topic或物模型通信Topic。 请参见[CreateRule](/cn.zh-CN/云端开发指南/云端API参考/云产品流转/CreateRule.md)指定正确的Topic。 |
 |iot.ruleng.IncorrectType|应用规则的Topic类型错误。 TopicType支持的可选值：
 
