--- a/intl.zh-CN/设备管理/Alink协议/设备日志上报.md
+++ b/intl.zh-CN/设备管理/Alink协议/设备日志上报.md
@@ -9,8 +9,8 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 本地日志]
 **说明：**
 
 -   使用了以下Link SDK的设备端支持本地日志上报，您也可以自行开发带有本地日志上报功能的SDK。
-    -   [Android SDK](https://help.aliyun.com/document_detail/96607.html)
-    -   [C SDK](https://help.aliyun.com/document_detail/96623.html)
+    -   [Android SDK]()
+    -   [C SDK](https://www.alibabacloud.com/help/doc-detail/96623.htm)
 -   您在设备详情页，开启**设备本地日志上报**开关后，设备才能将本地日志上报到云端。
 
 设备本地日志的具体查询方法，请参见[设备本地日志](/intl.zh-CN/监控运维/日志服务/设备本地日志.md)。
@@ -143,7 +143,7 @@ Alink请求数据格式：
 |module|String|模块名称： -   当设备端使用Android SDK时，模块名称为ALK-LK。
 -   当设备端使用C SDK时，需自定义模块名称。
 -   当设备端使用自行开发的SDK时，需自定义模块名称。 |
-|code|String|结果状态码： -   当设备端使用Android SDK时，请参见[Android SDK错误码](https://help.aliyun.com/document_detail/108167.html)。
+|code|String|结果状态码： -   当设备端使用Android SDK时，请参见[Android SDK错误码](https://help.aliyun.com/document_detail/108167.html)[错误码](t1842448.md#)。
 -   当设备端使用C SDK时，请参见[C SDK状态码](https://code.aliyun.com/linksdk/docs/wikis/prog-guide/StateCode_List?accounttraceid=ab8cd6fea5f5405397aa189c4a84f67dysoo)。
 -   当设备端使用自行开发的SDK时，可以自定义结果状态码，也可以为空。 |
 |traceContext|String|可选参数，上下文跟踪内容，设备端使用Alink协议消息的id，App端使用TraceId（追踪ID）。|
