--- a/intl.zh-CN/产品简介/名词解释.md
+++ b/intl.zh-CN/产品简介/名词解释.md
@@ -1,44 +1,62 @@
-# 名词解释 {#concept_brv_q23_d2b .concept}
+---
+keyword: [物联网, IoT, 物联网平台, 物联网应用, 设备]
+---
+
+# 名词解释
 
 本章主要介绍物联网平台中相关的名词解释。
 
-## 产品名词解释 {#section_dnz_hg3_d2b .section}
+## 产品名词解释
 
-|名词|描述|
-|--|--|
-|产品|设备的集合，通常指一组具有相同功能的设备。物联网平台为每个产品颁发全局唯一的ProductKey。每个产品下可以有成千上万的设备。|
-|设备|归属于某个产品下的具体设备。物联网平台为设备颁发产品内唯一的证书DeviceName。设备可以直接连接物联网平台，也可以作为子设备通过网关连接物联网平台。|
-|分组|物联网平台支持建立分组，分组中可包含不同产品下的设备。通过设备组来进行跨产品管理设备。|
-|网关|能够直接连接物联网平台的设备，且具有子设备管理功能，能够代理子设备连接云端。|
-|子设备|本质上也是设备。子设备不能直接连接物联网平台，只能通过网关连接。|
-|设备证书|设备证书指ProductKey、DeviceName、DeviceSecret。 -   ProductKey：是物联网平台为产品颁发的全局唯一标识。该参数很重要，在设备认证以及通信中都会用到，因此需要您保管好。
--   DeviceName：在注册设备时，自定义的或自动生成的设备名称，具备产品维度内的唯一性。该参数很重要，在设备认证以及通信中都会用到，因此需要您保管好。
+|名词|描述|相关文档|
+|--|--|----|
+|产品|设备的集合，通常指一组具有相同功能的设备。物联网平台为每个产品颁发全局唯一的ProductKey。|[创建产品](/intl.zh-CN/设备接入/创建产品.md)|
+|设备|归属于某个产品下的具体设备。物联网平台为设备颁发产品内唯一的证书DeviceName。设备可以直接连接物联网平台，也可以作为子设备通过网关连接物联网平台。|[创建设备](/intl.zh-CN/设备接入/创建设备/单个创建设备.md)[管理设备](t154353.md#) |
+|分组|物联网平台支持建立设备分组，分组中可包含不同产品下的设备。通过设备组来进行跨产品管理设备。|[设备分组](/intl.zh-CN/设备管理/设备分组.md)|
+|网关|能够直接连接物联网平台的设备，且具有子设备管理功能，能够代理子设备连接云端。|[网关与子设备](/intl.zh-CN/设备管理/网关与子设备/网关与子设备.md)|
+|子设备|本质上也是设备。子设备不能直接连接物联网平台，只能通过网关连接。|[子设备管理](/intl.zh-CN/设备管理/网关与子设备/子设备管理.md)|
+|设备证书|设备证书指ProductKey、DeviceName、DeviceSecret的组合，用于设备认证以及建立连接。 -   ProductKey：物联网平台为产品颁发的全局唯一标识。该参数很重要，在设备认证以及通信中都会用到，因此需要您保管好。
+-   DeviceName：在注册设备时，自定义的或系统生成的设备名称，具备产品维度内的唯一性。该参数很重要，在设备认证以及通信中都会用到，因此需要您保管好。
 -   DeviceSecret：物联网平台为设备颁发的设备密钥，和DeviceName成对出现。该参数很重要，在设备认证时会用到，因此需要您保管好并且不能泄露。
 
- |
-|ProductSecret|由物联网平台颁发的产品密钥，通常与ProductKey成对出现，可用于一型一密的认证方案。该参数很重要，需要您保管好，不能泄露。|
-|Topic|Topic是UTF-8字符串，是发布/订阅（Pub/Sub）消息的传输中介。可以向Topic发布或者订阅消息。|
-|Topic类|同一产品下不同设备的Topic集合，用$\{productkey\}和$\{deviceName\}通配一个唯一的设备，一个Topic类对一个ProductKey下所有设备通用。|
-|发布|操作Topic的权限类型，对应的英文名称为Pub，具有往Topic中发布消息的权限。|
-|订阅|操作Topic的权限类型，对应的英文名称为Sub，具有从Topic中订阅消息的权限。|
-|RRPC|全称：Revert-RPC。RPC（Remote Procedure Call）采用客户机/服务器模式，用户不需要了解底层技术协议，即可远程请求服务。RRPC则可以实现由服务端请求设备端并能够使设备端响应的功能。|
+|[一机一密](/intl.zh-CN/设备接入/设备安全认证/一机一密.md)[设备获取设备证书](t1876560.md#)
+
+[MQTT-TCP连接通信](/intl.zh-CN/设备接入/使用开放协议自主接入/MQTT协议接入/MQTT-TCP连接通信.md)
+
+[CoAP连接通信](/intl.zh-CN/设备接入/使用开放协议自主接入/CoAP协议接入/CoAP连接通信.md)
+
+[HTTP连接通信](/intl.zh-CN/设备接入/使用开放协议自主接入/HTTP协议接入/HTTP连接通信.md) |
+|ProductSecret|由物联网平台颁发的产品密钥，通常与ProductKey成对出现，用于一型一密的认证方案。该参数很重要，需要您保管好，不能泄露。|[一型一密](/intl.zh-CN/设备接入/设备安全认证/一型一密.md)|
+|一机一密|每个设备烧录其唯一的设备证书（ProductKey、DeviceName和DeviceSecret）。当设备与物联网平台建立连接时，物联网平台对其携带的设备证书信息进行认证。|[一机一密](/intl.zh-CN/设备接入/设备安全认证/一机一密.md)|
+|一型一密|同一产品下所有设备可以烧录相同的ProductKey和ProductSecret。设备发送激活请求时，物联网平台对其携带的ProductKey和ProductSecret进行认证，认证通过，下发该设备接入所需信息。设备再携带这些信息与物联网平台建立连接。|[一型一密](/intl.zh-CN/设备接入/设备安全认证/一型一密.md)|
+|Topic|Topic是UTF-8字符串，是设备发布（Pub）、订阅（Sub）消息的传输中介。-   发布：设备可以往该Topic发布消息。
+-   订阅：设备可以订阅该Topic获取消息。
+
+|[什么是Topic](/intl.zh-CN/设备接入/消息通信Topic/什么是Topic.md)|
+|Topic类|同一产品下不同设备的Topic集合，用$\{productkey\}和$\{deviceName\}通配一个唯一的设备，一个Topic类对一个ProductKey下所有设备通用。|[什么是Topic](/intl.zh-CN/设备接入/消息通信Topic/什么是Topic.md)|
+|RRPC|全称：Revert-RPC。RPC（Remote Procedure Call）采用客户机/服务器模式，用户不需要了解底层技术协议，即可远程请求服务。RRPC则可以实现由服务端请求设备端，并能够使设备端响应的功能，物联网平台通过RRPC实现基于MQTT协议的同步通信。|[什么是RRPC](/intl.zh-CN/消息通信/MQTT同步通信（RRPC）/什么是RRPC.md)|
 |标签|标签分为产品标签、设备标签和分组标签。 -   产品标签：描述同一个产品下，所有设备所具有的共性信息。
--   设备标签：通常根据设备的特性为设备添加的特有的标记，您可灵活自定义标签内容。
+-   设备标签：通常根据设备的特性为设备添加的特有标记，您可以自定义标签内容。
 -   分组标签：描述同一个分组下，所有设备所具有的共性信息。
 
- |
-|Alink协议|阿里云定义的设备与云端之间的通信协议。|
-|物模型|是对设备在云端的功能描述，包括设备的属性、服务和事件。物联网平台通过定义一种物的描述语言来描述物模型，称之为 TSL（即 Thing Specification Language），采用JSON格式，您可以根据TSL组装上报设备的数据。|
-|属性|设备的功能模型之一，一般用于描述设备运行时的状态，如环境监测设备所读取的当前环境温度等。属性支持 GET 和 SET 请求方式。应用系统可发起对属性的读取和设置请求。|
-|服务|设备的功能模型之一，设备可被外部调用的能力或方法，可设置输入参数和输出参数。相比于属性，服务可通过一条指令实现更复杂的业务逻辑，如执行某项特定的任务。|
-|事件|设备的功能模型之一，设备运行时的事件，事件一般包含需要被外部感知和处理的通知信息，可包含多个输出参数。如，某项任务完成的信息，或者设备发生故障或告警时的温度等，事件可以被订阅和推送。|
-|数据解析脚本|针对采用透传格式/自定义数据格式的设备，需要在云端编写数据解析脚本，将设备上报的二进制数据或自定义的JSON数据，转换为平台上的Alink JSON数据格式。|
-|设备影子|是一个 JSON 文档，用于存储设备或者应用的当前状态信息。每个设备都会在云端有唯一的设备影子对应，无论该设备是否连接到 Internet，您都可以使用设备影子通过 MQTT 协议或 HTTP 协议获取和设置设备的状态。|
-|规则引擎|通过创建、配置规则，以实现数据流转和场景联动。|
-|数据流转|物联网平台规则引擎的数据流转功能，可将Topic中的数据转发至其他Topic或其他阿里云服务进行存储或处理。|
-|场景联动|场景联动是一种开发自动化业务逻辑的可视化编程方式，您可以通过可视化的方式定义设备之间联动规则，并将规则部署至云端或者边缘端。|
-|服务端订阅|服务端订阅产品下所有类型的消息：设备上报消息、设备状态变化通知、网关发现子设备上报消息、设备生命周期变更消息和设备拓扑关系变更消息。目前支持两种方式实现服务端订阅：HTTP/2 SDK和消息服务（MNS）队列。|
-|一型一密|同一产品下所有设备可以烧录相同产品证书（即ProductKey和ProductSecret）。设备发送激活请求时，物联网平台进行产品身份确认，认证通过，下发该设备对应的DeviceSecret。|
-|一机一密|每个设备烧录其唯一的设备证书（ProductKey、DeviceName和DeviceSecret）。当设备与物联网平台建立连接时，物联网平台对其携带的设备证书信息进行认证。|
-|期望属性值|通过期望属性值功能，设置您希望的设备属性值。若设备在线，将实时更新属性值；若设备离线，期望属性值将缓存在云端。设备上线后，获取期望属性值，并更新属性值。|
+|[标签](/intl.zh-CN/设备管理/标签.md)|
+|Alink协议|阿里云定义的设备与云端之间的双向通信协议，采用JSON格式。|[Alink协议](/intl.zh-CN/设备管理/Alink协议/Alink协议.md)|
+|物模型|是对设备在云端的功能描述，包括设备的属性、服务和事件。物联网平台通过定义一种物的描述语言来描述物模型，称之为TSL（即 Thing Specification Language），采用JSON格式，您可以根据TSL组装上报设备的数据。|[什么是物模型](/intl.zh-CN/设备管理/物模型/什么是物模型.md)|
+|属性|设备的功能模型之一，一般用于描述设备运行时的状态，如环境监测设备所读取的当前环境温度等。属性支持GET和SET请求方式。应用系统可发起对属性的读取和设置请求。|[什么是物模型](/intl.zh-CN/设备管理/物模型/什么是物模型.md)[设备属性、事件、服务](t18885.md#) |
+|期望属性值|通过期望属性值功能，设置您希望的设备属性值。若设备在线，将实时更新属性值；若设备离线，期望属性值将缓存在云端。设备上线后，获取期望属性值，并更新属性值。|[什么是物模型](/intl.zh-CN/设备管理/物模型/什么是物模型.md)[设备期望属性值](t135669.md#) |
+|服务|设备的功能模型之一，设备可被外部调用的能力或方法，可设置输入参数和输出参数。相比于属性，服务可通过一条指令实现更复杂的业务逻辑，如执行某项特定的任务。|[什么是物模型](/intl.zh-CN/设备管理/物模型/什么是物模型.md)[设备属性、事件、服务](t18885.md#) |
+|事件|设备的功能模型之一，设备运行时的事件。事件一般包含需要被外部感知和处理的通知信息，可包含多个输出参数。例如，某项任务完成的信息，或者设备发生故障或告警时的温度等，事件可以被订阅和推送。|[什么是物模型](/intl.zh-CN/设备管理/物模型/什么是物模型.md)[设备属性、事件、服务](t18885.md#) |
+|数据解析脚本|针对采用透传格式/自定义数据格式的设备，需要在云端编写数据解析脚本，将设备上报的二进制数据或自定义的JSON数据，转换为物联网平台支持的Alink JSON数据格式；将平台下发的Alink JSON格式数据，转换为设备支持的格式。|[什么是数据解析](/intl.zh-CN/设备管理/数据解析/什么是数据解析.md)|
+|设备影子|是一个JSON文档，用于存储设备或者应用的当前状态信息。每个设备都会在云端有唯一的设备影子。无论该设备是否连接到Internet，您都可以使用设备影子通过MQTT协议或HTTP协议获取和设置设备的状态。|[设备影子概览](/intl.zh-CN/设备管理/设备影子/设备影子概览.md)|
+|设备分发|设备分发可实现设备跨地域、跨实例或跨账号的分发。分发后，云端下发新的连接地址给设备，设备本地固化收到的信息之后，直接连接新的地址，免去二次烧录设备信息。|[设备分发](/intl.zh-CN/设备管理/设备划归/设备分发.md)|
+|规则引擎|通过创建、配置规则，以实现服务端订阅、数据流转和场景联动。|[通信方式概述](/intl.zh-CN/消息通信/通信方式概述.md)|
+|服务端订阅|服务端订阅产品下所有类型的消息：设备上报消息、设备状态变化通知、网关发现子设备上报消息、设备生命周期变更消息和设备拓扑关系变更消息。目前支持两种方式实现服务端订阅： -   AMQP：Advanced Message Queuing Protocol，高级消息队列协议。服务端通过AMQP协议接入云端，接收云端推送的消息。
+-   MNS：将消息流转到指定阿里云消息服务（MNS）队列中，您的服务端从MNS队列中接收消息。
+
+|[什么是服务端订阅](/intl.zh-CN/消息通信/服务端订阅/什么是服务端订阅.md)|
+|数据流转|物联网平台规则引擎的数据流转功能，可将Topic中的数据转发至其他Topic或其他阿里云服务进行存储或处理。|[云产品流转概述](/intl.zh-CN/消息通信/云产品流转/云产品流转概述.md)|
+|场景联动|场景联动是一种开发自动化业务逻辑的可视化编程方式。您可以通过可视化的方式定义设备之间联动规则，并将规则部署至云端或者边缘端。|[什么是场景联动](/intl.zh-CN/用户指南/场景联动/什么是场景联动.md)|
+|公共实例|产品、设备、规则等资源均在实例中进行操作管理。默认开通的物联网平台服务为公共实例。公共实例部署于阿里云经典网络。多账号共用一个公共实例，账号之间逻辑隔离。
+
+|[实例管理](/intl.zh-CN/.md)|
 
