--- a/cn.zh-CN/消息通信/云产品流转/数据流转方案对比.md
+++ b/cn.zh-CN/消息通信/云产品流转/数据流转方案对比.md
@@ -18,7 +18,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 -   云产品流转：对设备数据进行过滤并转换，然后再流转到其他阿里云云产品实例。
 -   服务端订阅：通过AMQP或消息服务（MNS）客户端直接获取设备消息。
 
-两者的对比如下表所示。
+两者的对比，如下表所示。
 
 |流转方式|使用场景|优缺点|使用限制|
 |:---|:---|:--|:---|
@@ -53,7 +53,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 |:---|:---|:-|:-|
 |实例内的时序数据存储 **说明：** 仅用户购买的企业版实例支持实例内的时序数据存储。
 
-|适合根据设备数据进行业务分析和监控的场景。|数据直接写入实例内的时序数据存储。|-|
+|适合根据设备数据进行业务分析和监控的场景。|数据直接写入实例内的时序数据存储。|不涉及|
 |消息队列RocketMQ|要对设备数据进行复杂或精细化处理的海量设备场景。 设备消息量\>1,000 QPS的场景，推荐使用消息队列 RocketMQ。
 
 |-   稳定可靠。
@@ -66,10 +66,10 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 -   公网支持较好。
 
 |性能略低于消息队列RocketMQ。 |
-|云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|-|
-|时序数据库（TSDB）|适合根据设备数据进行业务分析和监控的场景。|数据直接写入时序数据库。|-|
-|DataHub|适合需对数据进行分析处理的场景。|数据直接写入DataHub。|-|
-|表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|-|
+|云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|不涉及|
+|时序数据库（TSDB）|适合根据设备数据进行业务分析和监控的场景。|数据直接写入时序数据库。|不涉及|
+|DataHub|适合需对数据进行分析处理的场景。|数据直接写入DataHub。|不涉及|
+|表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|不涉及|
 |函数计算（Function Compute）|需要简化设备开发过程，且对设备数据进行一定自由度的处理的场景。|-   数据处理自由度高。
 -   功能多。
 -   无需部署。
