--- a/intl.zh-CN/消息通信/云产品流转/数据流转方案对比.md
+++ b/intl.zh-CN/消息通信/云产品流转/数据流转方案对比.md
@@ -18,7 +18,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 -   云产品流转：对设备数据进行过滤并转换，然后再流转到其他阿里云云产品实例。
 -   服务端订阅：通过AMQP或消息服务（MNS）客户端直接获取设备消息。
 
-两者的对比如下表所示。
+两者的对比，如下表所示。
 
 |流转方式|使用场景|优缺点|使用限制|
 |:---|:---|:--|:---|
@@ -57,8 +57,8 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 -   公网支持较好。
 
 |- |
-|云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|-|
-|表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|-|
+|云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|不涉及|
+|表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|不涉及|
 |函数计算（Function Compute）|需要简化设备开发过程，且对设备数据进行一定自由度的处理的场景。|-   数据处理自由度高。
 -   功能多。
 -   无需部署。
