--- a/cn.zh-CN/最佳实践/消息通信/物模型通信.md
+++ b/cn.zh-CN/最佳实践/消息通信/物模型通信.md
@@ -501,11 +501,11 @@ public static void main(String[] args) {
 
     ![物模型通信](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2531649951/p54075.png)
 
--   在物联网平台控制台，对应实例下设备的设备详情页，
+-   在物联网平台控制台，对应实例下设备的设备详情页：
 
     -   运行状态页签下，查看设备最后一次上报的属性值和属性数据记录。
     -   事件管理页签下，查看设备上报的事件记录。
     -   服务调用页签下，查看云端下发的服务调用记录。
-    ![物模型通信](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2531649951/p54079.png)
+    ![物模型通信](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5554707061/p54079.png)
 
 
