--- a/cn.zh-CN/最佳实践/设备接入/设备通过DTU接入物联网平台/配置产品和设备.md
+++ b/cn.zh-CN/最佳实践/设备接入/设备通过DTU接入物联网平台/配置产品和设备.md
@@ -14,7 +14,7 @@ keyword: [IoT, 物联网平台, 串口传输协议, DTU设备]
 
 2.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-    ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+    ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
 3.  在左侧导航栏，选择**设备管理** \> **产品**，再单击**创建产品**，创建一个产品。
 
@@ -59,7 +59,7 @@ keyword: [IoT, 物联网平台, 串口传输协议, DTU设备]
 
 2.  在数据解析页签下的编辑脚本输入框中，输入数据解析脚本。
 
-    数据解析脚本编写指导，请访问[LoRaWAN设备数据解析](/cn.zh-CN/设备管理/数据解析/LoRaWAN设备数据解析.md)。
+    数据解析脚本编写指导，请参见[提交数据解析脚本](/cn.zh-CN/设备管理/数据解析/自定义Topic数据解析/提交数据解析脚本.md)。
 
     本示例设备发送至云端的数据为16进制格式，因此脚本需将16进制格式数据转换为Alink JSON格式，并将云端下发的Alink JSON格式数据转换为16进制格式。
 
@@ -168,7 +168,7 @@ keyword: [IoT, 物联网平台, 串口传输协议, DTU设备]
 
             运行结果栏显示解析结果如下图。
 
-            ![设备上报数据](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3431649951/p137795.png)
+            ![设备上报数据](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3431649951/p137795.png)
 
     -   测试云端下行数据解析。
         1.  选择模拟类型为**设备接收数据**。
@@ -189,7 +189,7 @@ keyword: [IoT, 物联网平台, 串口传输协议, DTU设备]
 
             运行结果栏显示解析结果如下图。
 
-            ![设备接收数据](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/3431649951/p71152.png)
+            ![设备接收数据](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3431649951/p71152.png)
 
 4.  确认脚本能正确解析数据后，单击**提交**，将脚本提交到物联网平台系统。
 
