--- a/cn.zh-CN/设备管理/设备划归/设备分发.md
+++ b/cn.zh-CN/设备管理/设备划归/设备分发.md
@@ -107,7 +107,7 @@
             ```
 
     2.  设备分发中心根据分发的目标地域和实例（就近接入时，将根据设备IP位置动态判断目标地域和实例），返回设备目标实例接入点。
-    3.  设备可以通过三元组和分发服务返回给设备的实例接入点信息，使用MQTT协议与云端建立连接。
+    3.  设备可以通过设备证书（ProductKey、DeviceName、DeviceSecret）和分发服务返回给设备的实例接入点信息，使用MQTT协议与云端建立连接。
         -   阿里云C SDK接入方式
 
             建议使用SDK 4.x版本进行设备接入。具体操作，请参见[MQTT接入]()。
@@ -170,7 +170,7 @@
 
     3.  在实例概览页，找到对应的实例，单击实例进入实例详情页。
 
-        ![实例概览](https://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/zh-CN/9275903061/p174584.png)
+        ![实例概览](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8727475061/p174584.png)
 
     4.  在左侧导航栏，选择**设备划归** \> **设备分发**。
 
@@ -205,6 +205,9 @@
 
 若地域下有多个实例，可从下拉框选择要分发到的实例。 |
         |设备选择方式|可通过两种方式选择要分发的设备：         -   **手动勾选**：从产品列表选择设备所在的产品，再从设备列表选择设备。设备列表翻页时会保持设备选中状态。
+
+分发策略选择为**指定地域**时，如果不选择设备，则仅分发产品。
+
         -   **文件上传**：上传设备分发列表文件。一个文件最多包含1,000条记录，格式为CSV，可单击**下载模板**获取文件模板。 |
 
     7.  单击**确认**。
