--- a/intl.zh-CN/监控运维/日志服务/设备本地日志.md
+++ b/intl.zh-CN/监控运维/日志服务/设备本地日志.md
@@ -54,7 +54,7 @@ keyword: [物联网, 物联网平台, IoT, 设备日志, 本地日志]
 
 日志内容中包含结果状态码Code。根据结果状态码进行日志分析。
 
--   当设备端使用Android SDK时，请参见[Android SDK错误码](https://help.aliyun.com/document_detail/108167.html)。
+-   当设备端使用Android SDK时，请参见[Android SDK错误码](https://help.aliyun.com/document_detail/108167.html)[错误码](t1842448.md#)。
 -   当设备端使用C SDK时，请参见[C SDK状态码](https://code.aliyun.com/linksdk/docs/wikis/prog-guide/StateCode_List?accounttraceid=ab8cd6fea5f5405397aa189c4a84f67dysoo)。
 -   当设备端使用自行开发的SDK时，可以自定义结果状态码，也可以为空。
 
