--- a/intl.zh-CN/设备管理/Alink协议/设备日志上报.md
+++ b/intl.zh-CN/设备管理/Alink协议/设备日志上报.md
@@ -143,7 +143,7 @@ Alink请求数据格式：
 |module|String|模块名称： -   当设备端使用Android SDK时，模块名称为ALK-LK。
 -   当设备端使用C SDK时，需自定义模块名称。
 -   当设备端使用自行开发的SDK时，需自定义模块名称。 |
-|code|String|结果状态码： -   当设备端使用Android SDK时，请参见[Android SDK错误码](https://help.aliyun.com/document_detail/108167.html)[错误码](t1842448.md#)。
+|code|String|结果状态码： -   当设备端使用Android SDK时，请参见[错误码]()。
 -   当设备端使用C SDK时，请参见[C SDK状态码](https://code.aliyun.com/linksdk/docs/wikis/prog-guide/StateCode_List?accounttraceid=ab8cd6fea5f5405397aa189c4a84f67dysoo)。
 -   当设备端使用自行开发的SDK时，可以自定义结果状态码，也可以为空。 |
 |traceContext|String|可选参数，上下文跟踪内容，设备端使用Alink协议消息的id，App端使用TraceId（追踪ID）。|
