--- a/intl.zh-CN/消息通信/云产品流转/数据流转方案对比.md
+++ b/intl.zh-CN/消息通信/云产品流转/数据流转方案对比.md
@@ -56,7 +56,7 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 |-   采用HTTPS协议。
 -   公网支持较好。
 
-|- |
+|不涉及 |
 |云数据库RDS版|适合单纯的数据保存场景。|数据直接写入数据库。|不涉及|
 |表格存储（Tablestore）|适合单纯的数据存储场景。|数据直接写入表格存储实例。|不涉及|
 |函数计算（Function Compute）|需要简化设备开发过程，且对设备数据进行一定自由度的处理的场景。|-   数据处理自由度高。
@@ -107,5 +107,5 @@ keyword: [物联网, 物联网平台, IoT, 规则引擎, 服务端订阅, 流转
 
 |-   [设置数据流转规则](/intl.zh-CN/消息通信/云产品流转/设置数据流转规则.md)
 -   [数据转发到函数计算](/intl.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到函数计算.md)
--   -   [函数计算使用指南](函数计算使用指南t1880965.dita#concept_2259864) |
+-   [函数计算使用指南](函数计算使用指南t1880965.dita#concept_2259864) |
 
