--- a/cn.zh-CN/云端开发指南/云端SDK参考/.NET SDK使用说明.md
+++ b/cn.zh-CN/云端开发指南/云端SDK参考/.NET SDK使用说明.md
@@ -1,8 +1,12 @@
-# .NET SDK使用说明 {#reference_d1v_zwb_zdb .reference}
+---
+keyword: [物联网, IoT, 物联网平台, 设备, .NET SDK, API]
+---
+
+# .NET SDK使用说明
 
 物联网平台提供.NET语言的云端SDK供开发人员使用。本文介绍云端.NET SDK的安装和配置，及使用.NET SDK调用云端API的示例。
 
-## 安装 IoT .NET SDK {#section_h44_ng2_zdb .section}
+## 安装SDK
 
 1.  安装.NET开发环境。
 
@@ -17,33 +21,41 @@
     以使用Visual Studio为例。
 
     1.  在Visual Studio的解决方案资源管理器中，右键单击您的项目后，在菜单中选择**管理NuGet程序包**。
+
     2.  在NuGet 管理面板中，单击**浏览**。
+
     3.  在选项卡中，输入aliyun-net-sdk，然后在列表中选择Authors为Alibaba Cloud的[aliyun-net-sdk-iot](https://www.nuget.org/packages/aliyun-net-sdk-iot)。
+
     4.  单击**安装**。
 
-## 初始化SDK {#section_gbs_4j2_zdb .section}
+
+## 初始化SDK
 
 **说明：** 以下示例以华东2地域及其服务接入地址为例。您在设置时，需使用您的物联网平台地域和对应的服务接入地址。
 
-``` {#codeblock_947_m1c_eq5}
+```
 using Aliyun.Acs.Core;
 using Aliyun.Acs.Core.Exceptions;
 using Aliyun.Acs.Core.Profile;
-DefaultProfile.AddEndpoint("cn-shanghai", "cn-shanghai", "Iot", "iot.cn-shanghai.aliyuncs.com");
 IClientProfile clientProfile = DefaultProfile.GetProfile("cn-shanghai", "<your-access-key-id>", "<your-access-key-secret>");
 DefaultAcsClient client = new DefaultAcsClient(clientProfile);
 ```
 
 请在[阿里云官网控制台AccessKey管理](https://ak-console.aliyun.com)中创建或查看您的AccessKeyId和AccessKeySecret。
 
-## 发起调用 {#section_xsr_yj2_zdb .section}
+## 发起调用
 
-物联网平台云端API，请参见[API列表](intl.zh-CN/云端开发指南/云端API参考/API列表.md#)。
+物联网平台云端API，请参见[API列表](/cn.zh-CN/云端开发指南/云端API参考/API列表.md)。
 
 以调用Pub接口向Topic发布消息为例。
 
-``` {#codeblock_kvq_7pn_w16}
+**说明：** 以下代码中iotInstanceId为实例ID，企业版实例填写实例ID，公共实例要删除代码`request.IotInstanceId = "<iotInstanceId>";`。
+
+关于如何购买企业版实例，请参见[实例管理](/cn.zh-CN/.md)。
+
+```
 PubRequest request = new PubRequest();
+request.IotInstanceId = "<iotInstanceId>"; 
 request.ProductKey = "<productKey>";
 request.TopicFullName = "/<productKey>/<deviceName>/get";
 byte[] payload = Encoding.Default.GetBytes("Hello World.");
@@ -68,9 +80,9 @@ catch (ClientException e)
 }
 ```
 
-## 附录：Demo {#section_rl6_blp_hxj .section}
+## 附录：Demo
 
-单击下载[云端SDK Demo](http://docs-aliyun.cn-hangzhou.oss.aliyun-inc.com/assets/attach/44229/intl_en/1568085719729/iotx-api-demo.tar.gz)。Demo中包含Java、Python、PHP、.NET版本SDK示例。
+下载[云端SDK Demo](https://github.com/aliyun/iotx-api-demo)。Demo中包含Java、Python、PHP、.NET和Go版本SDK示例。
 
-另外，阿里云提供API在线调试工具 [OpenAPI Explorer](https://api.aliyun.com)。在OpenAPI Explorer页，您可以快速检索和试验调用API。系统会根据您输入的参数同步生成各语言SDK的Demo代码。各语言SDK Demo显示在页面右侧**示例代码**页签下。在**调试结果**页签下，查看API调用的真实请求URL和JSON格式的返回结果。
+另外，阿里云提供API在线调试工具[OpenAPI Explorer](https://api.aliyun.com)。在OpenAPI Explorer页，您可以快速检索和试验调用API。系统会根据您输入的参数同步生成各语言SDK的Demo代码。各语言SDK Demo显示在页面右侧**示例代码**页签下。在**调试结果**页签下，查看API调用的真实请求URL和JSON格式的返回结果。
 
