--- a/cn.zh-CN/入门教程/企业版实例快速入门/服务端订阅设备消息.md
+++ b/cn.zh-CN/入门教程/企业版实例快速入门/服务端订阅设备消息.md
@@ -8,7 +8,7 @@
 
 1.  登录[物联网平台控制台](http://iot.console.aliyun.com/)。
 
-2.  在实例概览页，找到对应的企业实例，单击实例进入实例详情页。
+2.  在实例概览页，找到对应的企业版实例，单击实例进入实例详情页。
 
 3.  在左侧导航栏，选择**规则引擎** \> **服务端订阅**。
 
@@ -46,14 +46,16 @@
 
 7.  单击**查看**进入数据流转规则页，设置数据转发目的地为创建的服务端订阅消费组（例如：温控器数据接收）。
 
+    具体操作，请参见[数据转发到AMQP服务端订阅消费组](/cn.zh-CN/消息通信/云产品流转/数据流转使用示例/数据转发到AMQP服务端订阅消费组.md)。
+
     ![添加操作](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6323965061/p183473.png)
 
 
 ## Java SDK接入示例
 
-1.  打开IntelliJ IDEA，创建一个Mave工程。例如**Amqp**。
+1.  打开IntelliJ IDEA，创建一个Maven工程。例如**Amqp**。
 
-2.  在工程中的pom.xml文件中，添加Maven依赖。
+2.  在工程中的pom.xml文件中，添加Maven依赖，然后单击Load Maven Changes图标，完成依赖包下载。
 
     ```
     <!-- amqp 1.0 qpid client -->
@@ -76,7 +78,7 @@
             </dependency>
     ```
 
-3.  在路径Amqp\\src\\main\\java下，创建Java类。例如AmqpJavaClientDemo，输入以下代码。
+3.  在路径Amqp\\src\\main\\java下，创建Java类（例如AmqpJavaClientDemo），将AmqpJavaClientDemo.java文件内容替换为以下代码。
 
     以下代码示例中涉及的参数说明，请参见[AMQP客户端接入说明](/cn.zh-CN/消息通信/服务端订阅/使用AMQP服务端订阅/AMQP客户端接入说明.md)。
 
@@ -106,6 +108,7 @@
     import org.slf4j.Logger;
     import org.slf4j.LoggerFactory;
     
+    //此处类名AmqpJavaClientDemo与创建的Java类文件名必须一致。
     public class AmqpJavaClientDemo {
     
         private final static Logger logger = LoggerFactory.getLogger(AmqpJavaClientDemo.class);
@@ -121,7 +124,7 @@
             String accessKey = "${YourAccessKey}";
             String accessSecret = "${YourAccessSecret}";
             String consumerGroupId = "${YourConsumerGroupId}";
-            //iotInstanceId：购买的实例请填写实例ID，公共实例请填空字符串""。
+            //iotInstanceId：企业版实例请填写实例ID，公共实例请填空字符串""。
             String iotInstanceId = "${YourIotInstanceId}"; 
             long timeStamp = System.currentTimeMillis();
             //签名方法：支持hmacmd5、hmacsha1和hmacsha256。
@@ -259,7 +262,7 @@
     }
     ```
 
-4.  运行SDK，执行结果如下图。
+4.  运行AmqpJavaClientDemo.java文件，执行结果如下图。
 
     ![SDK运行结果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0076455061/p182593.png)
 
