--- a/cn.zh-CN/入门教程/企业版实例快速入门/数据转发到表格存储.md
+++ b/cn.zh-CN/入门教程/企业版实例快速入门/数据转发到表格存储.md
@@ -41,7 +41,9 @@
 
     ![温控器数据流转](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4382965061/p183650.png)
 
-    1.  单击**编写SQL**，编写处理消息字段的SQL。如下所示，请您根据实际情况编写SQL。
+    1.  单击**编写SQL**，在弹出对话框中，输入SELECT的字段，并选择自定义的Topic，单击**确认**。
+
+        如下所示，请您根据实际情况编写SQL。本示例完整SQL语句如下：
 
         ```
         SELECT items.temperature.value as temperature, items.humidity.value as humidity,deviceName() as deviceName,timestamp() as time FROM "/YourProductKey/YourDeviceName/thing/event/property/post"
