--- a/cn.zh-CN/产品定价/计费概述.md
+++ b/cn.zh-CN/产品定价/计费概述.md
@@ -15,7 +15,7 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 -   华南1（深圳）
 
 |一种预付费模式。购买企业版实例后，即可使用实例下包含的服务。|[企业版实例（包年包月）](/cn.zh-CN/产品定价/企业版实例（包年包月）.md)|
-|公共实例|按量付费|中国地域：华东2（上海）
+|公共实例|按量计费|中国地域：华东2（上海）
 
 中国以外地域：
 
@@ -25,9 +25,9 @@ keyword: [物联网, IoT, 物联网平台, 收费方式, 计费方式, 按量计
 -   美国（硅谷）
 -   美国（弗吉尼亚）
 
-|一种后付费模式，即先使用再付费。系统根据使用的付费资源，在每个结算周期生成账单并从账户中扣除相应费用，无最低费用。|-   [消息通信计费]()
--   [连接时长计费]()
--   [OTA升级计费]()
--   [计费示例]() |
-|包购买量|支持购买资源包：购买后立即生效，优先抵用。|[包购买量计费]()|
+|一种后付费模式，即先使用再付费。系统根据使用的付费资源，在每个结算周期生成账单并从账户中扣除相应费用，无最低费用。|-   [消息通信计费](/cn.zh-CN/产品定价/公共实例/按量计费/消息通信计费.md)
+-   [连接时长计费](/cn.zh-CN/产品定价/公共实例/按量计费/连接时长计费.md)
+-   [OTA升级计费](/cn.zh-CN/产品定价/公共实例/按量计费/OTA升级计费.md)
+-   [计费示例](/cn.zh-CN/产品定价/公共实例/按量计费/计费示例.md) |
+|包购买量|支持购买资源包：购买后立即生效，优先抵用。|[包购买量计费](/cn.zh-CN/产品定价/公共实例/包购买量计费.md)|
 
