--- a/cn.zh-CN/入门教程/企业版实例快速入门/云端下发指令.md
+++ b/cn.zh-CN/入门教程/企业版实例快速入门/云端下发指令.md
@@ -13,8 +13,8 @@
     const RPCClient = require('@alicloud/pop-core').RPCClient;
     
     const options = {
-        accessKey: "子账号accessKey",
-        accessKeySecret: "子账号accessKeySecret"
+        accessKey: "RAM用户accessKey",
+        accessKeySecret: "RAM用户accessKeySecret"
     };
     
     //1.初始化 API Client
@@ -54,10 +54,10 @@
     |--|--|
     |accessKey|您的阿里云账号的AccessKey。登录物联网平台控制台，将鼠标移至账号头像上，然后单击**AccessKey管理**，获取AccessKey。
 
-**说明：** 如果使用子账号AccessKey ID，您需要给该子账号授予管理物联网平台的权限（AliyunIOTFullAccess），否则将会连接失败。授权方法请参见[授权子账号访问物联网平台](/cn.zh-CN/权限管理/账号授权/RAM授权管理/子账号访问.md)。 |
+**说明：** 如果使用RAM用户AccessKey ID，您需要给该RAM用户授予管理物联网平台的权限（AliyunIOTFullAccess），否则将会连接失败。授权方法请参见[授权RAM用户访问物联网平台](/cn.zh-CN/权限管理/账号授权/RAM授权管理/子账号访问.md)。 |
     |accessKeySecret|您的阿里云账号的AccessKey Secret。 登录物联网平台控制台，将鼠标移至账号头像上，然后单击**AccessKey管理**，获取AccessKey Secret。 |
     |endpoint|Endpoint是阿里云服务的API服务端地址。Endpoint中，地域需与物联网平台产品地域保持一致。本示例中，地域为华东2（cn-shanghai），EndpointAPI服务端地址为：https://iot.cn-shanghai.aliyuncs.com。 |
-    |TopicFullName|设置发布消息的topic。使用自定义Topic通信的示例，具体操作，请参见[使用自定义Topic进行通信](/cn.zh-CN/最佳实践/消息通信/使用自定义Topic进行通信.md)。 |
+    |TopicFullName|设置发布消息的Topic。使用自定义Topic通信的示例，具体操作，请参见[使用自定义Topic进行通信](/cn.zh-CN/最佳实践/消息通信/使用自定义Topic进行通信.md)。 |
     |ProductKey|设备所属产品Key。可在控制台**设备详情**页查看。|
     |IotInstanceId|实例ID。仅您购买的企业版实例需要传入。|
 
